--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
+    "form-data": "^4.0.0",
     "jwt-decode": "^3.1.2",
     "mobx": "^6.3.6",
     "mobx-react": "^7.2.1",
